[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art Assets/bucketcubby.png" type="Texture" id=1]
[ext_resource path="res://Devices/BucketCubby.gd" type="Script" id=2]
[ext_resource path="res://Art Assets/EKey.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.5
height = 27.3074

[sub_resource type="Animation" id=2]
resource_name = "KeyPress"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="BucketCubby" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.1, 1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -5.1, 0 )
polygon = PoolVector2Array( -31, 17, -15, 25, 32, 1, 17, -8 )

[node name="InteractArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 5, 13 )
rotation = 1.0472
scale = Vector2( 0.989963, 0.908949 )
shape = SubResource( 1 )

[node name="KeyPressSprite" type="Sprite" parent="."]
position = Vector2( -12, -36 )
texture = ExtResource( 3 )
hframes = 4

[node name="KeyPressAnimator" type="AnimationPlayer" parent="."]
anims/KeyPress = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
